feat: split chunk

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <div id="root"></div>
+
+  <!-- <script src="https://now8.gtimg.com/now/lib/16.8.6/react.min.js"></script>
+  <script src="https://now8.gtimg.com/now/lib/16.8.6/react-dom.min.js"></script> -->
 </body>
 </html>
