--- a/src/search/index.html
+++ b/src/search/index.html
@@ -7,8 +7,7 @@
   <title>Search</title>
 </head>
 <body>
-  <div id="root"></div>
-
+  <div id="root"><!--HTML_PALCEHOLDER--></div>
   <script src="https://now8.gtimg.com/now/lib/16.8.6/react.min.js"></script>
   <script src="https://now8.gtimg.com/now/lib/16.8.6/react-dom.min.js"></script>
 </body>
