--- a/src/search/index.html
+++ b/src/search/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="root"><!--HTML_PALCEHOLDER--></div>
+  <!--INITIAL_DATA_PLACEHOLDER-->
   <script src="https://now8.gtimg.com/now/lib/16.8.6/react.min.js"></script>
   <script src="https://now8.gtimg.com/now/lib/16.8.6/react-dom.min.js"></script>
 </body>
